--- a/app/src/main/res/layout/activity_view_list.xml
+++ b/app/src/main/res/layout/activity_view_list.xml
@@ -17,9 +17,10 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:text="Which list would you like to add this book to?"
+        app:layout_constraintBottom_toTopOf="@+id/spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="500dp" />
+        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
 
     <Button
         android:id="@+id/back"
