--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -7,22 +7,15 @@
     android:background="#fcd5ce"
     tools:context=".Statistics">
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:background="#FFB4A2"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:text="Which list would you like to view?"
-        app:layout_constraintBottom_toTopOf="@+id/spinner2"
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/piChart"
+        android:layout_width="311dp"
+        android:layout_height="243dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.103"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/BooksRead"
-        app:layout_constraintVertical_bias="0.908" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.434" />
 
     <Button
         android:id="@+id/backer"
@@ -35,7 +28,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.871" />
+        app:layout_constraintVertical_bias="0.953" />
 
     <TextView
         android:id="@+id/textView3"
@@ -46,82 +39,9 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.57"
+        app:layout_constraintHorizontal_bias="0.598"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.108" />
+        app:layout_constraintVertical_bias="0.073" />
 
-    <TextView
-        android:id="@+id/averageRating"
-        android:layout_width="189dp"
-        android:layout_height="32dp"
-        android:background="#FFB4A2"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:text="Average Rating:"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.027"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.227" />
-
-    <TextView
-        android:id="@+id/BooksRead"
-        android:layout_width="189dp"
-        android:layout_height="32dp"
-        android:background="#ffb4a2"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:text="Books Total:"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.027"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/averageRating"
-        app:layout_constraintVertical_bias="0.062" />
-
-    <TextView
-        android:id="@+id/calculationRating"
-        android:layout_width="177dp"
-        android:layout_height="34dp"
-        android:background="#ffb4a2"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.76"
-        app:layout_constraintStart_toEndOf="@+id/averageRating"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.227" />
-
-    <TextView
-        android:id="@+id/booksRead"
-        android:layout_width="177dp"
-        android:layout_height="34dp"
-        android:background="#ffb4a2"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.769"
-        app:layout_constraintStart_toEndOf="@+id/BooksRead"
-        app:layout_constraintTop_toBottomOf="@+id/calculationRating"
-        app:layout_constraintVertical_bias="0.059" />
-
-    <Spinner
-        android:id="@+id/spinner2"
-        android:layout_width="376dp"
-        android:layout_height="31dp"
-        android:popupBackground="#ffb4a2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.542"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.768" />
 </androidx.constraintlayout.widget.ConstraintLayout>
